<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Squash It</string>
  <string name="insert_or_update_credentials">Insert or update credentials</string>
  <string name="user_id">User ID</string>
  <string name="secret">Secret</string>
  <string name="confirm">Confirm</string>
  <string name="delete_credentials">Delete credentials</string>
  <string name="credentials_added">Added %s</string>
  <string name="credentials_updated">Updated %s</string>
  <string name="credentials_deleted">Deleted %s</string>
  <string name="undo">Undo</string>

  <string name="import_export">Import / Export</string>

  <string name="import_text">Import</string>
  <string name="import_credentials">Import credentials</string>
  <string name="credentials_import">Credentials Import</string>
  <string name="import_service_title_importing">Importing credentials…</string>
  <string name="import_service_text_importing">Importing credentials file</string>
  <string name="import_service_title_failed">Credentials import failed!</string>
  <string name="import_service_text_read_file_failure">Failed to open credentials file</string>
  <string name="import_service_text_read_credentials_failure">Failed read credentials from file</string>
  <string name="credentials_imported">Credentials imported</string>

  <string name="export_text">Export</string>
  <string name="export_credentials">Export credentials</string>
  <string name="credentials_export">Credentials Export</string>
  <string name="export_service_title_creating">Exporting credentials…</string>
  <string name="export_service_text_creating">Importing credentials file</string>
  <string name="export_service_title_failed">Credentials export failed!</string>
  <string name="export_service_text_no_credentials_failure">No stored credentials found</string>
  <string name="export_service_text_write_file_failure">Failed to create export file</string>
</resources>
