<?xml version="1.0" encoding="utf-8"?>
<shortcuts
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:targetApi="n_mr1">

  <shortcut
      android:enabled="true"
      android:icon="@drawable/ic_shortcut_import"
      android:shortcutDisabledMessage="@string/import_text"
      android:shortcutId="import"
      android:shortcutLongLabel="@string/import_credentials"
      android:shortcutShortLabel="@string/import_text">
    <intent
        android:action="android.intent.action.MAIN"
        android:targetClass="io.mehow.squashit.ImportActivity"
        android:targetPackage="io.mehow.squashit" />
  </shortcut>

  <shortcut
      android:enabled="true"
      android:icon="@drawable/ic_shortcut_export"
      android:shortcutDisabledMessage="@string/export_text"
      android:shortcutId="export"
      android:shortcutLongLabel="@string/export_credentials"
      android:shortcutShortLabel="@string/export_text">
    <intent
        android:action="android.intent.action.MAIN"
        android:targetClass="io.mehow.squashit.ExportActivity"
        android:targetPackage="io.mehow.squashit" />
  </shortcut>

</shortcuts>
